Remove noisy value validation warnings for email input type.

We cannot distinguish invalid email addresses
which web developers mistakenly specified.

BUG=638455

Review-Url: https://codereview.chromium.org/2339493002
Cr-Commit-Position: refs/heads/master@{#419934}

Former-commit-id: 1676e3b6c99cde2e3581315e50b37e29876900d0